# orbion

./: .dockerignore  .gitignore  .markdownlint.json  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.staging.yml  docker-compose.yml  orbion.json  pyproject.toml
app/: config.py  main.py
docs/misc/: agent-sdk-comparison.md  resource-estimation.md  sdk-capability-analysis.md
docs/plans/: 1-mvp-implementation-plan.md  1-mvp-test-design.md  1.0-mvp-impl-plan.md  1.0-mvp-test-design.md  1.1-mvp-ui-entry-impl-plan.md  1.1-mvp-ui-entry-test-design.md  1.10-mvp-git-worktree-model-impl-plan.md  1.10-mvp-git-worktree-model-test-design.md  1.11-mvp-agent-runtime-refactor-impl-plan.md  1.11-mvp-agent-runtime-refactor-test-design.md  1.8-mvp-file-layout-impl-plan.md  1.8-mvp-file-layout-test-design.md  1.9-mvp-right-panel-editor-impl-plan.md  1.9-mvp-right-panel-editor-test-design.md  known-issues.md
docs/specs/: 0.1-arch.md  0.2-glossary.md  0.3-arch-appendix.md  1.1-mvp-overview.md  1.10-mvp-git-worktree-model.md  1.2-mvp-event-infrastructure.md  1.3-mvp-data-model.md  1.4-mvp-permissions.md  1.5-mvp-api-and-auth.md  1.6-mvp-agent-runtime.md  1.7-mvp-ui-entry-design.md  1.8-mvp-file-layout.md  1.9-mvp-right-panel-editor.md  2.1-phase2-overview.md  (+3 more)
migrations/: 001_initial.sql
scripts/: deploy-staging.sh  init-test-dbs.py  kill-and-restart-docker.sh  pg-init-dev.sh  setup-all.sh  start-e2e-server.py
tests/: conftest.py
web/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
(+231 files in other folders)
