[project]
name = "orbion"
version = "0.1.0"
description = "多人+多Agent双协作的AI开发平台"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "asyncpg>=0.30",
    "uvicorn>=0.34",
    "pyjwt>=2.10",
    "bcrypt>=4.2",
    "gitpython>=3.1",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.15",
    "mypy>=1.14",
    "asyncpg-stubs>=0.30",  # mypy类型存根
    "pip-audit>=2.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN"]

[tool.mypy]
python_version = "3.12"
strict = true
